--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-scroll-component": "^0.6.7",
+    "react-scroll-up": "^1.4.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
